# AI_Chatbot-for-Employee-Onboarding-

./: .gitignore  README.md  app.py  assistant.py  gui.py  requirements.txt
data/: employees.py  pyproject.toml
